@@ -7,11 +7,10 @@ require 't/Test.php';
 require 'includes/Defines.php';
 require 'includes/ProfilerStub.php';
 require 'LocalSettings.php';
-require 'AdminSettings.php';
 require 'includes/Setup.php';
 
 function buildTestDatabase( $tables ) {
-	global $wgDBprefix, $wgDBserver, $wgDBadminuser, $wgDBadminpassword, $wgDBname, $wgDBtype;
+	global $wgDBprefix, $wgDBserver, $wgDBname, $wgDBtype;
 	$oldPrefix = $wgDBprefix;
 	$wgDBprefix = 'parsertest';
 
